Consolidate client e2e tests into the API gateway e2e