@@ -35,41 +35,7 @@ testing {
 
         val test = suites.getByName<JvmTestSuite>("test")
 
-        val componentTest =
-            register<JvmTestSuite>("componentTest") {
-                dependencies {
-                    implementation(libs.axon.springBoot.starter) {
-                        exclude(
-                            group = libs.axon.serverConnector.get().group,
-                            module = libs.axon.serverConnector.get().name,
-                        )
-                    }
-                    implementation(libs.axon.extensions.reactor.springBootStarter)
-                    implementation(libs.commons.lang3)
-                    implementation(libs.reactor.test)
-                    implementation(libs.reactor.blockhound)
-                    implementation(libs.reactor.tools)
-                    implementation(libs.resilience4j.springBoot3)
-                    implementation(libs.spring.boot.starter.aop)
-                    implementation(libs.spring.boot.starter.test)
-                }
-
-                targets {
-                    all {
-                        testTask.configure {
-                            jvmArgs =
-                                listOf(
-                                    "-XX:+AllowRedefinitionToAddDeleteMethods",
-                                    "-XX:+EnableDynamicAgentLoading",
-                                )
-
-                            shouldRunAfter(test)
-                        }
-                    }
-                }
-            }
-
-        register<JvmTestSuite>("e2eTest") {
+        register<JvmTestSuite>("componentTest") {
             dependencies {
                 implementation(libs.axon.springBoot.starter) {
                     exclude(
@@ -77,15 +43,14 @@ testing {
                         module = libs.axon.serverConnector.get().name,
                     )
                 }
-                implementation(libs.axon.extensions.jgroups.springBootStarter)
                 implementation(libs.axon.extensions.reactor.springBootStarter)
+                implementation(libs.commons.lang3)
                 implementation(libs.reactor.test)
                 implementation(libs.reactor.blockhound)
+                implementation(libs.reactor.tools)
+                implementation(libs.resilience4j.springBoot3)
+                implementation(libs.spring.boot.starter.aop)
                 implementation(libs.spring.boot.starter.test)
-                implementation(libs.spring.boot.starter.webflux)
-                implementation(libs.testcontainers.junit.jupiter)
-                implementation(libs.testcontainers.postgresql)
-                implementation(libs.testcontainers.kafka)
             }
 
             targets {
@@ -97,12 +62,7 @@ testing {
                                 "-XX:+EnableDynamicAgentLoading",
                             )
 
-                        shouldRunAfter(componentTest)
-                        mustRunAfter(":showcase-command-service:integrationTest")
-
-                        dependsOn(":showcase-command-service:bootBuildImage")
-
-                        systemProperty("disable-axoniq-console-message", "true")
+                        shouldRunAfter(test)
                     }
                 }
             }
