@@ -36,54 +36,10 @@ testing {
 
         val test = suites.getByName<JvmTestSuite>("test")
 
-        val componentTest =
-            suites.register<JvmTestSuite>("componentTest") {
-                dependencies {
-                    implementation(project(":showcase-resilience4j-extension"))
-                    implementation(project(":showcase-query-proto"))
-
-                    implementation(libs.axon.springBoot.starter) {
-                        exclude(
-                            group = libs.axon.serverConnector.get().group,
-                            module = libs.axon.serverConnector.get().name,
-                        )
-                    }
-                    implementation(libs.spring.data.opensearch.starter) {
-                        exclude(
-                            group = libs.opensearch.client.restHighLevel.get().group,
-                            module = libs.opensearch.client.restHighLevel.get().name,
-                        )
-                    }
-                    implementation(libs.opensearch.client.java)
-                    implementation(libs.elasticsearch.client.java)
-                    implementation(libs.reactor.test)
-                    implementation(libs.reactor.blockhound)
-                    implementation(libs.reactor.tools)
-                    implementation(libs.resilience4j.springBoot3)
-                    implementation(libs.spring.boot.starter.aop)
-                    implementation(libs.spring.boot.starter.test)
-                    implementation(libs.spring.boot.starter.webflux)
-                    implementation(libs.wiremock.springBoot)
-                }
-
-                targets {
-                    all {
-                        testTask.configure {
-                            jvmArgs =
-                                listOf(
-                                    "-XX:+AllowRedefinitionToAddDeleteMethods",
-                                    "-XX:+EnableDynamicAgentLoading",
-                                )
-
-                            shouldRunAfter(test)
-                        }
-                    }
-                }
-            }
-
-        register<JvmTestSuite>("e2eTest") {
+        register<JvmTestSuite>("componentTest") {
             dependencies {
-                implementation(project(":showcase-projection-model"))
+                implementation(project(":showcase-resilience4j-extension"))
+                implementation(project(":showcase-query-proto"))
 
                 implementation(libs.axon.springBoot.starter) {
                     exclude(
@@ -101,16 +57,12 @@ testing {
                 implementation(libs.elasticsearch.client.java)
                 implementation(libs.reactor.test)
                 implementation(libs.reactor.blockhound)
+                implementation(libs.reactor.tools)
+                implementation(libs.resilience4j.springBoot3)
+                implementation(libs.spring.boot.starter.aop)
                 implementation(libs.spring.boot.starter.test)
-                implementation(libs.spring.boot.testcontainers)
-                implementation(libs.spring.data.opensearch.testcontainers) {
-                    exclude(
-                        group = libs.opensearch.client.restHighLevel.get().group,
-                        module = libs.opensearch.client.restHighLevel.get().name,
-                    )
-                }
-                implementation(libs.testcontainers.junit.jupiter)
-                implementation(libs.testcontainers.opensearch)
+                implementation(libs.spring.boot.starter.webflux)
+                implementation(libs.wiremock.springBoot)
             }
 
             targets {
@@ -122,11 +74,7 @@ testing {
                                 "-XX:+EnableDynamicAgentLoading",
                             )
 
-                        shouldRunAfter(componentTest)
-
-                        dependsOn(":showcase-query-service:bootBuildImage")
-
-                        systemProperty("disable-axoniq-console-message", "true")
+                        shouldRunAfter(test)
                     }
                 }
             }
